# perfomaV3

./: .dockerignore  .env.docker  .env.example  .gitignore  .replit  DOCKER.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.backend  Dockerfile.brain  Dockerfile.frontend  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  requirements.txt  run.sh  start-simple.sh  start.sh
agent/: README.md  utils.py
agent-brain/: __init__.py  main.py  requirements.txt
app/: globals.css  layout.tsx  page.tsx
attached_assets/: Pasted--0s-git-pull-origin-main-remote-Enumerating-objects-54-done-remote-Counting-objects-100-5-1764507113955_1764507113955.txt  Pasted--0s-pip-install-docker-compose-Collecting-docker-compose-Downloading-docker-compose-1-29-2-py2--1764469052049_1764469052049.txt  Pasted--11m14s-docker-compose-up-WARNING-The-ANTHROPIC-API-KEY-variable-is-not-set-Defaulting-to-a-blan-1764509369476_1764509369476.txt  Pasted--Checking-prerequisites-Prerequisites-OK-Syncing-env-to-backend-Freeing-up-por-1764516127777_1764516127777.txt  Pasted--Freeing-up-ports-Activating-Python-environment-Python-environment-activated--1764515626336_1764515626336.txt  Pasted--use-client-import-type-React-from-react-import-Card-CardContent-CardHeader-CardTitle-fr-1764293301197_1764293301198.txt  Pasted-COMMANDS-NETWORK-RECON-FAST-SCANNING-nmap-rustscan-masscan-zmap-naab-1764331017555_1764331017555.txt  Pasted-Setting-up-cpp-14-x86-64-linux-gnu-14-2-0-19-Setting-up-libdpkg-perl-1-22-21-Setting-up--1764470017479_1764470017479.txt  (+10 more)
lib/: api.ts  (+2 more)
(+121 files in other folders)
